--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Commit files
         run: |
           git config user.email github-actions@github.com
-          git config user.name github-actions
+          git config user.name github-actions[bot]
           git add .
           git commit -m "compile resume and add generated resume.pdf files"
 
