--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -67,3 +67,10 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: ${{ github.ref }}
+          
+      - name: Attest
+        uses: actions/attest-build-provenance@v3
+        with:
+          subject-path: |
+            pdf/
+            img/
