add src checking

--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Lint Typst
         run: |
           cd typst
-          typstyle rajeev_atla_resume.typ template.typ --inplace --indent-width 4 --verbose --timing
+          typstyle /src --inplace --indent-width 4 --verbose --timing
           cd ..
           
       - uses: typst-community/setup-typst@v4
