--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -27,9 +27,7 @@ jobs:
           
       - name: Lint Typst
         run: |
-          cd typst
-          typstyle /src --inplace --indent-width 4 --verbose --timing
-          cd ..
+          typstyle /typst --inplace --indent-width 4 --verbose --timing
           
       - uses: typst-community/setup-typst@v4
         with:
