--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -29,6 +29,7 @@ jobs:
         with:
           tool: harper-cli
           git: https://github.com/Automattic/harper
+          rev: master
           
       - name: Lint Typst
         run: |
