--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           tool: harper-cli
           git: https://github.com/Automattic/harper
-          tag: 0.1.0
+          rev: a8e09d5
           
       - name: Lint Typst
         run: |
