--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -44,6 +44,7 @@ jobs:
           typst compile typst/rajeev_atla_resume.typ pdf/Rajeev_Atla_resume_intern.pdf --input position=intern &
           typst compile typst/rajeev_atla_resume.typ pdf/Rajeev_Atla_resume_fulltime.pdf --input position=fulltime &
           typst compile typst/rajeev_atla_resume.typ pdf/Rajeev_Atla_resume_BS.pdf --input position=BS &
+          typst compile typst/rajeev_atla_resume.typ pdf/Rajeev_Atla_resume_2027.pdf --input position=2027 &
           typst compile typst/rajeev_atla_resume.typ img/resume_LQ.png --input position=default &
           typst compile --ppi 1200 typst/rajeev_atla_resume.typ img/resume.png
 
