--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -40,12 +40,13 @@ jobs:
       
       - name: Compile Typst
         run: |
-          typst compile typst/rajeev_atla_resume.typ pdf/resume.pdf --input position=default &
-          typst compile typst/rajeev_atla_resume.typ pdf/Rajeev_Atla_resume_intern.pdf --input position=intern &
-          typst compile typst/rajeev_atla_resume.typ pdf/Rajeev_Atla_resume_fulltime.pdf --input position=fulltime &
-          typst compile typst/rajeev_atla_resume.typ pdf/Rajeev_Atla_resume_BS.pdf --input position=BS &
-          typst compile typst/rajeev_atla_resume.typ img/resume_LQ.png --input position=default &
-          typst compile --ppi 1200 typst/rajeev_atla_resume.typ img/resume.png
+          typst compile typst/rajeev_atla_resume.typ pdf/resume.pdf --input term=default --input domain=default
+          typst compile typst/rajeev_atla_resume.typ pdf/aiml/intern/Rajeev_Atla_Resume.pdf --input term=intern --input domain=aiml
+          typst compile typst/rajeev_atla_resume.typ pdf/aiml/newgrad/Rajeev_Atla_Resume.pdf --input term=newgrad --input domain=aiml
+          typst compile typst/rajeev_atla_resume.typ pdf/dataeng/intern/Rajeev_Atla_Resume.pdf --input term=intern --input domain=dataeng
+          typst compile typst/rajeev_atla_resume.typ pdf/dataeng/newgrad/Rajeev_Atla_Resume.pdf --input term=newgrad --input domain=dataeng
+          typst compile typst/rajeev_atla_resume.typ pdf/swe/intern/Rajeev_Atla_Resume.pdf --input term=intern --input domain=swe
+          typst compile typst/rajeev_atla_resume.typ pdf/swe/newgrad/Rajeev_Atla_Resume.pdf --input term=newgrad --input domain=swe
 
       - name: Copy resume file
         run: |
